<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reiki.CreateReikiFragment"
    >

    <FrameLayout
        android:id="@+id/cont_create_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imb_create_back"
            style="@style/ImageButtonToolbar"

            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="start"
            android:tint="@color/colorWhite"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/lbl_reiki_toolbar_title"
            style="@style/TextViewToolbar"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_toolbar_create_reiki"
            />

        <ImageButton
            android:id="@+id/imb_create_done"
            style="@style/ImageButtonToolbar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="end"
            android:tint="@color/colorWhite"
            android:contentDescription="@string/done"
            android:src="@drawable/ic_done_black_24dp" />

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ipl_reiki_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont_create_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_reiki_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/reiki_title"
            android:inputType="textCapSentences"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toRightOf="@+id/lbl_reiki_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cont_create_toolbar" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ipl_reiki_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipl_reiki_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_reiki_description"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/reiki_description"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="2"
            android:singleLine="false"
            app:layout_constraintLeft_toLeftOf="@+id/edt_reiki_title"
            app:layout_constraintTop_toBottomOf="@+id/edt_reiki_title"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/ckb_reiki_play_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:text="@string/play_music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipl_reiki_description"
        app:layout_constraintVertical_bias="0.04000002" />

</androidx.constraintlayout.widget.ConstraintLayout>
