<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/root_reiki_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    android:padding="8sp">

    <LinearLayout
        android:id="@+id/group_reiki_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_reiki_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/reiki_title"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/lbl_reiki_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:ellipsize="none"
            android:fontFamily="sans-serif"
            android:maxLines="4"
            android:scrollHorizontally="false"
            android:text="@string/reiki_description"
            android:textColor="@color/colorTextLight"
            android:textSize="14sp"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/to_position_list"
        android:gravity="center_horizontal|end"
        android:src="@drawable/ic_chevron_right_black_24dp"
        android:tint="@color/colorSecondaryDark"/>

    <ProgressBar
        android:id="@+id/pro_item_reiki"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone"/>

    <!--</android.support.constraint.ConstraintLayout>-->
</RelativeLayout>