<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.position.CreatePositionFragment">

    <FrameLayout
        style="@style/Toolbar"
        android:id="@+id/cont_create_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="-5dp"
        app:layout_constraintHorizontal_bias="0.0">

        <ImageButton
            android:id="@+id/imb_create_back"
            style="@style/ImageButtonToolbar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="left"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_arrow_back_black_24dp"
            />

        <TextView
            style="@style/TextViewToolbar"
            android:id="@+id/lbl_position_toolbar_title"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_toolbar_create_position"
            />

        <ImageButton
            android:id="@+id/imb_create_done"
            style="@style/ImageButtonToolbar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="right"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_done_black_24dp"/>

    </FrameLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ipl_position_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont_create_toolbar">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_position_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/position_title"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ipl_position_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipl_position_title">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edt_position_duration"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="12dp"
            android:hint="@string/position_duration"
            android:inputType="time"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipl_position_title" />

    </android.support.design.widget.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
