<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root_fragment_position_list"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparentBlack"
    tools:context=".ui.position.PositionListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tlb_position_list_activity"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:elevation="6dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_stop"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:scaleType="center"
        android:src="@drawable/ic_stop_black_24dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/layout_ad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fab_play_pause"
        app:rippleColor="@color/colorTransparentBlack"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_play_pause"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:scaleType="center"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/layout_ad"
        app:layout_constraintLeft_toRightOf="@id/fab_stop"
        app:layout_constraintRight_toLeftOf="@id/fab_add"
        app:rippleColor="@color/colorTransparentBlack"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add_black_24dp"
        app:backgroundTint="@color/colorAccent"
        android:tint="@android:color/white"
        app:elevation="6dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/layout_ad"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/fab_play_pause"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:rippleColor="@color/colorTransparentBlack"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec_position_list_activity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/fab_play_pause"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlb_position_list_activity"        />

    <TextView
        android:id="@+id/lbl_position_prompt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/prompt_new_position"
        android:textColor="@color/ALPHA_WHITE"
        android:fontFamily="sans-serif-medium"
        android:background="@color/colorPrimaryLight"
        android:textSize="34sp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlb_position_list_activity"
        app:layout_constraintBottom_toTopOf="@id/layout_ad"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <LinearLayout
        android:id="@+id/layout_ad"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/tv_ad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/ad_text"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/ad_button_text"
            android:textColor="@color/ALPHA_WHITE"
            android:textStyle="bold"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>